<resources>
    <string name="app_name">MovieApp</string>
    <string name="background_image">background image</string>
    <string name="main_picture">main picture</string>
    <string name="theme">Avengers: Infinity War</string>
    <string name="realse">Realised:</string>
    <string name="date">2018-01-01</string>
    <string name="trailer">MOVIE TRAILER</string>
    <string name="overview">Overview:</string>
    <string name="storyline_Avengers">As the Avengers and
        their allies have continued to protect the world from threats too large
        for any one hero to handle, a new danger has emerged from the cosmic shadows:
        Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity
        Stones, artifacts of unimaginable power, and use them to inflict his twisted will
        on all of reality. Everything the Avengers have fought for has led up to this
        moment - the fate of Earth and existence itself has never been more uncertain. Written by Marvel Studios</string>
    <string name="movietitle">movieTitle</string>
    <string name="movietrailer">movietrailer</string>
    <string name="textview">TextView</string>
    <string name="nameofmovie">nameOfMovie</string>
    <string name="description">Description</string>
    <string name="storyline">storyline</string>
</resources>
